--- a/src/styles.css
+++ b/src/styles.css
@@ -1973,7 +1973,7 @@ main {
 .cs-back {
   all: unset;
   position: fixed;
-  top: 20px;
+  top: 84px;
   left: 20px;
   z-index: 200;
   cursor: pointer;
